--- a/src/www/home.html
+++ b/src/www/home.html
@@ -7,29 +7,22 @@
 <script type="text/javascript">
 var conn;
 var username;
-var channel_tiles;
-var channel_logs = {};
 var logs;
 var commands = {};
-commands["new_connection"] = function(msg,chl,user) {
+commands["new_connection"] = function(msg,user) {
   username = document.getElementById("displayusername");
-  channel_titles = document.getElementById("channel_titles");
   username.innerHTML = result;
 };
 </script>
 <script src='/forge-sha256.min.js'></script>
-<script src='/chat.js'></script>
 <script src='/login.js'></script>
-<script src='/channels.js'></script>
 <script type="text/javascript">
 
 window.onload = function () {
   const msg = document.getElementById("msg");
   logs = document.getElementById("log_div");
   username = document.getElementById("displayusername");
-  channel_titles = document.getElementById("channel_titles");
 
-  document.getElementById("chat").onsubmit = submit_chat;
   if (window["WebSocket"]) {
     conn = new WebSocket("ws://" + document.location.host + "/ws");
     conn.onopen = function (evt) { conn.send("{new_connection}"); };
@@ -38,9 +31,9 @@ window.onload = function () {
       appendSigninStatus("<b>Connection closed.</b>");
     };
     conn.onmessage = function (evt) {
-        var result = /\{([^\{\};:?]+)(::)?([a-zA-Z0-9_-]+)?(;;)?([a-zA-Z0-9_-]+)?\}(.*)/g.exec(evt.data);
+        var result = /\{([^\{\};:?]+)(:)?([a-zA-Z0-9_-]+)?\}(.*)/g.exec(evt.data);
         console.log(result);
-        commands[result[1]](result[6],result[3],result[5]);
+        commands[result[1]](result[4],result[3]);
     };
   } else {
     appendLog("<b>Your browser does not support WebSockets.</b>");
