Added createTextLinks to better handle links should a link need to be sent into the status bar.

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -15,6 +15,7 @@ commands["new_connection"] = function(msg,user) {
 };
 </script>
 <script src='/forge-sha256.min.js'></script>
+<script src='/messaging.js'></script>
 <script src='/login.js'></script>
 <script type="text/javascript">
 
