More login screen styling.

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -47,11 +47,11 @@ window.onload = function () {
 
 <div id="popup">
   <div id="account_signin_status"></div>
-  <div>Username:
+  <div id="login_user_div">Username:
     <input id="username" onkeyup="checkUsername_();" type="text"/>
     <img id="username_status" src="Pending.jpg" class="name_status_img" alt="This img is to display the status of the username" title="Please enter a username"></img>
   </div>
-  <div>
+  <div id="login_pwd_div">
       Password:
       <input id="pass" onkeyup="checkPassword_();" type="password"/>
       <img id="password_status" src="Pending.jpg" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
