--- a/src/www/home.html
+++ b/src/www/home.html
@@ -57,10 +57,8 @@ window.onload = function () {
       <img id="password_status" style="top:10px" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
   </div>
 
-
-  <br>
   <div>
-    <img src="Signin.png" onclick="signin_()"></img>
+    <img src="Login.png" onclick="signin_()"></img>
     Login
     &nbsp;
     Sign-up
