--- a/src/www/home.html
+++ b/src/www/home.html
@@ -49,20 +49,20 @@ window.onload = function () {
   <div id="account_signin_status"></div>
   <div id="login_user_div">Username:
     <input id="username" onkeyup="checkUsername_();" type="text"/>
-    <img id="username_status" style="top:10px" src="Pending.png" class="name_status_img" alt="This img is to display the status of the username" title="Please enter a username"></img>
+    <img id="username_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the username" title="Please enter a username"></img>
   </div>
   <div id="login_pwd_div">
       Password:
       <input id="pass" onkeyup="checkPassword_();" type="password"/>
-      <img id="password_status" style="top:10px" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
+      <img id="password_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
   </div>
 
   <div>
-    <img src="Login.png" onclick="signin_()"></img>
+    <img src="Login.png" onclick="signin_()" class="signup_login_img" ></img>
     Login
     &nbsp;
     Sign-up
-    <img src="Signup.png" onclick="signup_()">Sign up</button>
+    <img src="Signup.png" onclick="signup_()" class="signup_login_img" ></img>
   <div>
 
 </div>
