push the buttons to the center

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -57,7 +57,7 @@ window.onload = function () {
       <img id="password_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
   </div>
 
-  <div>
+  <div id="login_buttons">
     <img src="Login.png" onclick="signin_()" class="signup_login_img" ></img>
     Login
     &nbsp;
