--- a/src/www/home.html
+++ b/src/www/home.html
@@ -57,12 +57,14 @@ window.onload = function () {
       <img id="password_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
   </div>
 
-  <div id="login_buttons">
-    <img src="Login.png" onclick="signin_()" class="signup_login_img" ></img>
+  <span class="login_buttons" onclick="signin_()">
+    <img src="Login.png"  class="signup_login_img" ></img>
     Login
-    &nbsp;
+  </span>
+  &nbsp;
+  <span class="login_buttons" onclick="signup_()">
     Sign-up
-    <img src="Signup.png" onclick="signup_()" class="signup_login_img" ></img>
+    <img src="Signup.png"  class="signup_login_img" ></img>
   <div>
 
 </div>
