--- a/src/www/home.html
+++ b/src/www/home.html
@@ -57,17 +57,15 @@ window.onload = function () {
       <img id="password_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
   </div>
 
-  <div class="login_buttons">
-    <div onclick="signin_()">
-      <img src="Login.png"  class="signup_login_img" ></img>
-      Login
-    </div>
+  <span class="login_buttons" onclick="signin_()">
+    <img src="Login.png"  class="signup_login_img" ></img>
+    Login
     &nbsp;
-    <div onclick="signup_()">
+    <span onclick="signup_()"
       Sign-up
       <img src="Signup.png"  class="signup_login_img" ></img>
-    </div>
-  </div>
+    <div>
+  </span>
 
 </div>
 <div id="site_div">
