fixed some html

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -61,10 +61,10 @@ window.onload = function () {
     <img src="Login.png"  class="signup_login_img" ></img>
     Login
     &nbsp;
-    <span onclick="signup_()"
+    <span onclick="signup_()">
       Sign-up
       <img src="Signup.png"  class="signup_login_img" ></img>
-    <div>
+    </span>
   </span>
 
 </div>
