make hover for nice buttons.

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -59,10 +59,10 @@ window.onload = function () {
 
   <span class="login_buttons" onclick="signin_()">
     <img src="Login.png"  class="signup_login_img" ></img>
-    Login
+    <span class="login_button">Login</span>
     &nbsp;
     <span onclick="signup_()">
-      Sign-up
+      <span class="login_button">Sign up</span>
       <img src="Signup.png"  class="signup_login_img" ></img>
     </span>
   </span>
