Jk it was only a h3

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -46,7 +46,7 @@ window.onload = function () {
 <body>
 
 <div id="popup">
-  <h1>Welcome to </h1><h1 id="rem">R.E.M.</h1>
+  <h3>Welcome to <span id="rem">R.E.M.</span></h3>
   <div id="account_signin_status"></div>
   <div id="login_user_div">Username:
     <input id="username" onkeyup="checkUsername_();" type="text"/>
