set ids to be correct

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -82,7 +82,7 @@ window.onload = function () {
       <table class="contact_me_table">
         <tr>
           <td> <label for="email"> Email: </label> </td>
-          <td> <input style="width:300px" type="text" id="email" name="contact_me_email"/> </td>
+          <td> <input style="width:300px" type="text" id="contact_me_email" name="email"/> </td>
         </tr>
         <tr>
           <td> <label for="message"> Message: </label>
