--- a/src/www/home.html
+++ b/src/www/home.html
@@ -70,9 +70,11 @@ window.onload = function () {
 </div>
 <div id="site_div">
   <div id="displayusername" class="functional_btn"></div>
-  <div class="functional_btn" onclick="open_main_page()">Home</div>
-  <div class="functional_btn" onclick="open_contact_me()">Contact Me</div>
-  <div class="functional_btn" onclick="attempt_logout()">Logout</div>
+  <div id="nav_bar">
+    <div class="functional_btn" onclick="open_main_page()">Home</div>
+    <div class="functional_btn" onclick="open_contact_me()">Contact Me</div>
+    <div class="functional_btn" onclick="attempt_logout()">Logout</div>
+  </div>
 
   <div id="main_page" class="site_page">
     <h1>Welcome to my website<h1>
