Some minor bug fixes around logging in, changing accounts, and logging out.

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -77,7 +77,7 @@ window.onload = function () {
   </div>
 
   <div id="account_page" class="site_page">
-    <h1>Account Information<h1>
+    <h1>Account Information</h1>
       <p> Change your username and password here: </p>
       <div id="account_change_status"></div>
       <div id="change_old_pwd_div">
