Why are the p being served as h1s?

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -102,7 +102,7 @@ window.onload = function () {
   </div>
 
   <div id="main_page" class="site_page">
-    <h1>Welcome to my website<h1>
+    <h1> Welcome to my website </h1>
       <p> This business is all about connecting fans of ancient greek myths to their sources. </p>
       <p> Take a look around and be sure to send me an email with suggetions through the contact me page </p>
   </div>
