Submit checkin for logging the activity of users.

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -72,7 +72,7 @@ window.onload = function () {
   <div id="displayusername" class="functional_btn" onclick="open_account_page()"></div>
   <div id="nav_bar">
     <div class="functional_btn" onclick="open_main_page()">Home</div>
-    <div class="functional_btn" onclick="open_contact_me()">Contact Me</div>
+    <div class="functional_btn" onclick="open_contact_me()">Contact</div>
     <div class="functional_btn" onclick="attempt_logout()">Logout</div>
   </div>
 
@@ -108,7 +108,7 @@ window.onload = function () {
   </div>
 
   <div id="contact_me" class="site_page">
-    <h1> Contact Me </h1>
+    <h1> Contact </h1>
     <p> Fill out the form bellow to contact me </p> <br/>
       <table class="contact_me_table">
         <tr>
