--- a/src/www/home.html
+++ b/src/www/home.html
@@ -16,6 +16,7 @@ commands["new_connection"] = function(msg,user) {
 };
 </script>
 <script src='/forge-sha256.min.js'></script>
+<script src='/change.js'></script>
 <script src='/messaging.js'></script>
 <script src='/main.js'></script>
 <script src='/contact_me.js'></script>
