Removed some more checks

--- a/src/www/home.html
+++ b/src/www/home.html
@@ -99,15 +99,15 @@ window.onload = function () {
         <img id="change_username_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the username" title="Please enter a username"></img>
         <br/>
         <br/>
-        <span class="login_button" onclick="change_user_name()">Change account</span>
+        <span class="login_button" onclick="change_user_name()">Change Username</span>
       </div>
       <div id="change_pwd_div">
           <br/>
           <br/>
           <br/>
           New Password:
-          <input id="change_pass" onkeyup="checkPassword_('change_pass','change_password_status');" type="password"/>
-          <img id="change_password_status" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
+          <input id="change_pass_0" onkeyup="checkPassword_('change_pass_0','change_password_status_0');" type="password"/>
+          <img id="change_password_status_0" src="Pending.png" class="name_status_img" alt="This img is to display the status of the password" title="Please enter a password"></img>
           <div>
             Re-enter Password:
             <input id="change_pass" onkeyup="checkPassword_('change_pass','change_password_status');" type="password"/>
@@ -115,7 +115,7 @@ window.onload = function () {
           </div>
           <br/>
           <br/>
-          <span class="login_button" onclick="change_password()">Change account</span>
+          <span class="login_button" onclick="change_password()">Change Password</span>
       </div>
       </br>
   </div>
