--- a/src/www/report.html
+++ b/src/www/report.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <title>Chat Example</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<script src='/messaging.js'></script>
 <script type="text/javascript">
 var conn;
 </script>
@@ -19,7 +19,7 @@ window.onload = function () {
     conn.onmessage = function (evt) {
         var result = /\{([^\{\};:?]+)(:)?([a-zA-Z0-9_-]+)?\}(.*)/g.exec(evt.data);
         console.log(result);
-        document.getElementById("output").innerHTML = result[4]
+        document.getElementById("output").innerHTML = createTextLinks_(result[4]).split("\n").join("<br>")
     };
   } else {
     console.log("Your browser does not support WebSockets.");
