--- a/src/www/report.html
+++ b/src/www/report.html
@@ -19,7 +19,7 @@ window.onload = function () {
     conn.onmessage = function (evt) {
         var result = /\{([^\{\};:?]+)(:)?([a-zA-Z0-9_-]+)?\}(.*)/g.exec(evt.data);
         console.log(result);
-        document.getElementById("output").innerHTML = createTextLinks_(result[4]).split("\n").join("<br>")
+        document.getElementById("output").innerHTML = createTextLinks_(result[4])
     };
   } else {
     console.log("Your browser does not support WebSockets.");
