forgot to close javascript

--- a/src/www/report.html
+++ b/src/www/report.html
@@ -7,7 +7,7 @@
 <script type="text/javascript">
 var conn;
 </script>
-<script type="text/javascript">
+<script type="text/javascript"></script>
 <style>
 table:report {
   border: 2px;
