--- a/src/www/report.html
+++ b/src/www/report.html
@@ -5,11 +5,11 @@
 <title>Chat Example</title>
 <script src='/messaging.js'></script>
 <style>
-table:report {
+table#report {
   border: 2px;
   border-style:solid;
 }
-table:report td{
+table#report td{
   border: 1px;
   border-style:solid;
 }
