More prettying of the report

--- a/src/www/report.html
+++ b/src/www/report.html
@@ -8,10 +8,12 @@
 table#report {
   border: 2px;
   border-style:solid;
+	border-collapse:collapse;
 }
 table#report td{
   border: 1px;
   border-style:solid;
+	border-collapse:collapse;
 }
 </style>
 <script type="text/javascript">
